// This is the public API offered by your entity.
syntax = "proto3";

import "google/protobuf/empty.proto";
import "kalix/annotations.proto";
import "google/api/annotations.proto";

import "com/example/directdebit/fileprocessor/fileprocessor_domain.proto";

package com.example.directdebit.fileprocessor;

option java_outer_classname = "FileProcessorApi";

message StartCommand {
  string file_name = 1 [(kalix.field).entity_key = true];
}

message FinishCommand {
  string file_name = 1 [(kalix.field).entity_key = true];
}

message GetFileProcessorStateCommand {
  string file_name = 1 [(kalix.field).entity_key = true];
}

service FileProcessorService {
  option (kalix.codegen) = {
    event_sourced_entity: {
      name: "com.example.directdebit.fileprocessor.FileProcessorEntity"
      entity_type: "fileprocessor"
      state: "com.example.directdebit.fileprocessor.FileProcessorState",
      events: [
        "com.example.directdebit.fileprocessor.Started",
        "com.example.directdebit.fileprocessor.Finished"
      ]
    }
  };
  option (kalix.service).acl.allow = { principal: ALL };

  rpc Start(StartCommand) returns (google.protobuf.Empty);
  rpc Finish(FinishCommand) returns (google.protobuf.Empty);
  rpc GetFileProcessorState(GetFileProcessorStateCommand) returns (FileProcessorState);
}
